# Contador_Ana

./: .gitignore  Contando os segundos para lhe ver!.lnk  README.md  contagem_regressiva.spec  pyproject.toml
aplicativo_android/: buildozer.spec  contagem_regressiva.py
aplicativo_desktop/: contagem_regressiva.py  contagem_regressiva.spec  converter_para_exe.py
aplicativo_desktop/main/: contagem_regressiva.py  contagem_regressiva_v_1_3.py  converter_para_exe.py
src/app/: contagem_regressiva.py
